samples/_failures_safe/1761545126_67922a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd47ed26.c: In function ‘main’:
./samples/SAFE/__tmp_dd47ed26.c:148:19: error: expected ‘)’ at end of input
  148 |         if (strcmp
      |            ~      ^
      |                   )
./samples/SAFE/__tmp_dd47ed26.c:148:9: error: expected declaration or statement at end of input
  148 |         if (strcmp
      |         ^~
./samples/SAFE/__tmp_dd47ed26.c:148:9: error: expected declaration or statement at end of input
